--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light background-img">
     <div class="container-fluid">
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
           <li class="nav-item">
-            <img src="https://scontent.fcgh7-1.fna.fbcdn.net/v/t1.6435-9/166467367_3886437251432673_6331258158789053539_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=730e14&_nc_ohc=eRlmRjeuWGoAX_Pl71S&_nc_ht=scontent.fcgh7-1.fna&oh=b19d079e5bb2cbb1d1d7fc009497463f&oe=6149C2D6" alt="Imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
+            <img src="../../assets/WhatsApp Image 2021-08-25 at 13.53.35.jpeg" alt="Imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
           </li>
           <li class="nav-item pl-3">
             <p class="m-0 font-weight-bold text-white fs-16">Nome do usuário</p>
@@ -24,7 +24,7 @@
 
         <ul class="navbar-nav ml-auto d-flex align-items-center">
             <li class="nav-item pl-3">
-                <a class="m-0 font-weight-bold text-white fs-16">Sair<i class="fa fa-sign-out" aria-hidden="true"></i> </a>
+                <a class="m-0 font-weight-bold text-white fs-16">Sair<i class="fa fa-sign-out p-3" aria-hidden="true"></i> </a>
               </li>
 
         </ul>
