--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -5,3 +5,6 @@
 a{
     cursor: pointer;
 }
+.background-img{
+    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20190222/ourmid/pngtree-blue-atmospheric-background-image_50584.jpg");
+}
