--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -22,3 +22,7 @@ ul.social-network li{
 .fa-github:hover{
     color:yellowgreen;
 }
+
+.backgound-img{
+    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20190222/ourmid/pngtree-blue-atmospheric-background-image_50584.jpg");
+}
