--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small bg-secondary pt-4">
+<footer class="page-footer font-small backgound-img pt-4">
   <div class="container">
       <div class="row">
           <div class="col-md-12 d-flex justify-content-center">
@@ -28,7 +28,7 @@
   </div>
 
   <div class="footer-copyright bg-dark text-center py-3">
-      <span class="text-light"> 2021 Copyright by Thiago Mendes </span>
+      <span class="text-light"> 2021 © Copyright by Thiago Mendes </span>
 
   </div>
 </footer>
