--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!--<router-outlet></router-outlet>-->
+<app-menu *ngIf='auth.logado()'></app-menu>
+
 <router-outlet></router-outlet>
+
+<app-rodape *ngIf='auth.logado()'></app-rodape>
