--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,85 +1,97 @@
-<div class="container-fluid">
+<div class="container-fluid bg-dark">
+  <div class="container">
 
-    <div class="row bg-dark d-flex align-items-center">
-        <div class="col-md-6">
-
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6 text-white">
-                    <h1 class="fs-54">Seja bem vindo(a)</h1>
-                    <h5>espresse aqui os seus pensamentos e opniões!</h5>
-                    
-                </div>
-            </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-6 text-white">
+            <h1 class="fs-54">Seja bem vindo(a)</h1>
+            <h5>espresse aqui os seus pensamentos e opniões!</h5>
+          </div>
         </div>
 
-        <div class="row d-flex justify-content-center mt-3 mb-5">
-            <div class="col-md-6">
-                <button class="btn btn-light mr-2" data-bs-toggle="modal" data-bs-target="#novaPostagem" >Nova Postagem</button>
-                <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
-
-            </div>
-
+        <div class="row mt-3 mb-5 d-flex">
+          <div>
+            <button class="btn btn-light mt-2 mr-3" data-toggle="modal" data-target="#novaPostagem">Nova
+              Postagem</button>
+            <a class="btn btn-outline-light mt-2 " href="#postagens">Ver Postagens</a>
+          </div>
         </div>
-        
-       <div class="col-md-6 d-flex justify-content-center">
+      </div>
+
+      <div class="col-md-6 ms-auto">
         <img src="https://i.imgur.com/D2p7yQI.png" alt="" width="500px" height="500px">
-       </div>
-        
+      </div>
+
     </div>
+
+  </div>
 
 </div>
 
 <div class="container mb-5 mt-5" id="postagens">
-    
-    <nav>
-        <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
 
-          <button class="nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-bs-toggle="tab" data-bs-target="#nav-todasPostagens" type="button" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as postagens</button>
-          <button class="nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-bs-toggle="tab" data-bs-target="#nav-minhasPostagens" type="button" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas postagens</button>
-          <button class="nav-link text-secondary font-weight-bold" id="nav-postagemPorTema-tab" data-bs-toggle="tab" data-bs-target="#nav-postagemPorTema" type="button" role="tab" aria-controls="nav-postagemPorTema" aria-selected="false">Postagens por tema</button>
-        </div>
-      </nav>
+  <nav>
+    <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
 
-      <div class="tab-content" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">Todas as postagens</div>
-        <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">Minhas postagens</div>
-        <div class="tab-pane fade" id="nav-postagemPorTema" role="tabpanel" aria-labelledby="nav-postagemPorTema-tab">Postagens por tema</div>
-      </div>
+      <button class="nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-bs-toggle="tab"
+        data-bs-target="#nav-todasPostagens" type="button" role="tab" aria-controls="nav-todasPostagens"
+        aria-selected="true">Todas as postagens</button>
+      <button class="nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-bs-toggle="tab"
+        data-bs-target="#nav-minhasPostagens" type="button" role="tab" aria-controls="nav-minhasPostagens"
+        aria-selected="false">Minhas postagens</button>
+      <button class="nav-link text-secondary font-weight-bold" id="nav-postagemPorTema-tab" data-bs-toggle="tab"
+        data-bs-target="#nav-postagemPorTema" type="button" role="tab" aria-controls="nav-postagemPorTema"
+        aria-selected="false">Postagens por tema</button>
+    </div>
+  </nav>
+
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel"
+      aria-labelledby="nav-todasPostagens-tab">Todas as postagens</div>
+    <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">Minhas
+      postagens</div>
+    <div class="tab-pane fade" id="nav-postagemPorTema" role="tabpanel" aria-labelledby="nav-postagemPorTema-tab">
+      Postagens por tema</div>
+  </div>
 
 </div>
 
-  
-  <!-- Modal -->
-  <div class="modal fade" id="novaPostagem" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Nova Postagem</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-              <label for="titulo">Titulo</label>
-              <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
-          </div>
+<!--Modal-->
 
-          <div class="form-group">
-            <label for="texto">Texto</label>
-            <textarea class="form-control" name="texto" id="" rows="3"></textarea>
+<div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="TituloModalCentralizado">Nova Postagem</h5>
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <div class="form-group">
+          <label for="titulo">Titulo</label>
+          <input type="text" class="form-control" id="titulo" placeholder="Digite o titulo">
         </div>
 
         <div class="form-group">
-            <label for="texto">Escolha um tema ou <a data-bs-dismiss="modal" routerLink="/tema">cadastre um novo</a>:</label>
-            <select name="tema" id="tema" class="form-control">
-                <option value="">Temas</option>
-            </select>
+          <label for="texto">Texto</label>
+        <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
         </div>
 
+        <div class="form-group">
+          <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
+        <select name="tema" id="tema" class="form-control">
+            <option value="">Temas</option>
+        </select>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-success">Publicar</button>
-        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-success">Publicar</button>
       </div>
     </div>
   </div>
+</div>
