--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -79,6 +79,9 @@
                         <p class="card-text">{{item.texto}}</p>
                         <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/mm/yyyy'}} às {{item.data
                                 | date: 'HH:mm'}}</small></p>
+                       <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-5" href="">Editar</a>
+                       <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
+
                     </div>
                 </div>
             </div>
