--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -56,7 +56,8 @@
             aria-labelledby="nav-todasPostagens-tab">
 
             <div class="card-columns">
-                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" *ngFor='let item of listaPostagens'>
+                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" 
+                *ngFor='let item of listaPostagens | orderBy : key : reverse'>
                     <div class="card-body">
                         <h5 class="card-title">{{item.titulo}}</h5>
                         <small class="text-muted">Tema: {{item.tema.descricao}}</small>
@@ -72,7 +73,8 @@
         <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
 
             <div class="card-columns">
-                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" *ngFor='let item of user.postagem'>
+                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" 
+                *ngFor='let item of user.postagem | orderBy : key : reverse'>
                     <div class="card-body">
                         <h5 class="card-title">{{item.titulo}}</h5>
                         <small class="text-muted">Tema: {{item.tema.descricao}}</small>
@@ -91,7 +93,8 @@
         <div class="tab-pane fade" id="nav-postagemPorTema" role="tabpanel" aria-labelledby="nav-postagemPorTema-tab">
 
             <div class="card-columns" *ngFor='let tema of tema.postagem'>
-                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" *ngFor='let item of user.postagem'>
+                <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" 
+                *ngFor='let item of user.postagem | orderBy : key : reverse'>
                     <div class="card-body">
                         <h5 class="card-title">{{item.titulo}}</h5>
                         <p class="card-text">{{item.texto}}</p>
