--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -55,6 +55,15 @@
         <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel"
             aria-labelledby="nav-todasPostagens-tab">
 
+            <div class="row d-flex justify-content-center mt-5 mb-5">
+                <div class="col-md-4">
+                    <div class="form-group">
+                     <input type="text" class="form-control" id="titulo" placeholder="Digite um título de postagem para pesquisar"
+                      [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+                    </div>
+                </div>
+            </div>
+
             <div class="card-columns">
                 <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" 
                 *ngFor='let item of listaPostagens | orderBy : key : reverse'>
@@ -91,6 +100,15 @@
         </div>
 
         <div class="tab-pane fade" id="nav-postagemPorTema" role="tabpanel" aria-labelledby="nav-postagemPorTema-tab">
+
+            <div class="row d-flex justify-content-center mt-5 mb-5">
+                <div class="col-md-4">
+                    <div class="form-group">
+                     <input type="text" class="form-control" id="titulo" placeholder="Digite um tema para pesquisar"
+                      [(ngModel)]='nomeTema' (keyup)='findByNomeTema()'>
+                    </div>
+                </div>
+            </div>
 
             <div class="card-columns" *ngFor='let tema of tema.postagem'>
                 <div class="card text-white bg-dark mb-3" style="max-width: 18rem;" 
